# Scraping_DataFootball

./: .dockerignore  .gitignore  Dockerfile  README.md  dockercompose.yml  pyproject.toml  teste.py
.astro/: config.yaml
config/: p000_input_dict backup.py  p000_input_dict.py
dags/: d001_sofascore_scrapper_sports.py  d002_sofascore_scrapper_countries.py  d003_sofascore_scrapper_tournaments.py  d004_sofascore_scrapper_seasons.py  d005_sofascore_scrapper_rounds.py  d006_sofascore_scrapper_matches.py  d007_sofascore_scrapper_matches_statistics.py  d008_sofascore_scrapper_lineups.py  d009_sofascore_scrapper_lineups_statistics.py
dags/utils/: p000_input_dict.py
src/scraping_datafootball/scrapers/: sofascore_scraper_curl.py
src/scraping_datafootball/steps/: s001_steps_sports.py  s002_steps_countries.py  s003_steps_tournaments.py  s004_steps_seasons.py  s005_steps_rounds.py  s006_steps_matches.py  s007_steps_matches_statistics.py  s008_steps_lineups.py  s009_steps_lineups_statistics.py  s010_get_bet.py
src/scraping_datafootball/utils/: check_existencia.py  check_existencia_s3.py  load_csv.py  load_response_json.py  save_dataframe_csv.py  save_response_json.py
tests/: test_credencial.py
